--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //slider
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
     // implementation 'com.android.support:design:28.0.0-alpha1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
